CMAKE_MINIMUM_REQUIRED( VERSION 2.8.10 FATAL_ERROR )

# Enable C++11 features
SET( CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++ -U__STRICT_ANSI__" )

PROJECT( oneiroi )

FILE( GLOB_RECURSE ONEIROI_SOURCE_FILES "${PROJECT_SOURCE_DIR}/src/*.cpp" )
FILE( GLOB_RECURSE ONEIROI_HEADER_FILES "${PROJECT_SOURCE_DIR}/src/*.hpp" ) 

INCLUDE_DIRECTORIES( src )

ADD_EXECUTABLE( ${PROJECT_NAME}-console ${ONEIROI_SOURCE_FILES} ${ONEIROI_HEADER_FILES} )

